[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ember-opt"
version = "0.1.0"
description = "Ember: an O(V+D) embedding optimizer — Adam quality at ~1500x less optimizer state, distributed-ready."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["torch>=2.4"]

[tool.setuptools]
py-modules = ["ember", "helpers"]
